Hamlib -- History of visible changes.

Copyright (C) 2000-2003  Frank Singleton
Copyright (C) 2000-2015  Stephane Fillod, and others

Please send Hamlib bug reports to hamlib-developer@lists.sourceforge.net

Version 3.1
	2016-??-??
	* Fix kenwood_set_mode for ts590s and mode CW, RTTY or AM.
	  Tks Tom, DL1JBE

Version 3.0
	2015-09-20
	* Kill RPC backends and rpc.rigd/rpc.rotd
	* Remove -e|--end-marker option from rigctld and rotctld
	* Build system updates--remove obsolete macros, autogen.sh now
		runs autoreconf to invoke Autotools to bootstrap the build
		system, libltdl is installed into the source tree as a part
		of the build system bootstrap and is included in the source
		tarball, ABI version is set to be compatible with the 1.2
		series, all Autotools installed files are copied rather than
		symlinked and put in the build-aux directory, building
		rigmem and rigmatrix are now user selectable at configure
		run time, building static libraries are disabled by default.
		Fixed TCL binding installation, fixed Perl binding build so it
		is not invoked by 'make dist' and clean up build files.  Cleaned
		up bindings builds to occur in alphabetical order.  Use new
		ax_pkg_swig macro and update ax_python_devel macro.  Test for
		presence of pkg-config before testing for pkg-config use.
	* Implement new RIT/XIT activation/deactivation through rig_get/set_func()
	* IC-PCR1500/2500 default write_delay to 0, IC-746/756, IC-PCR8500
		fixes, pcr.c, pcr1500.c: Add DSP support.  TNX Paul, KE7ZZ
	* WinRadio G313 updates.  TNX Julian Campbel
	* Readline editing and history support added to rigctl interactive
		mode.  Implement options for reading and writing history file.
	* Readline editing and history support added to rotctl interactive
		mode.  Implement options for reading and writing history file.
	* A new manual draft written in Texinfo added.  Both GNU Info and single
		HTML files are built and distributed, requires makeinfo.