@@ -1,6 +1,6 @@
 /*
  *  Hamlib CI-V backend - main header
- *  Copyright (c) 2000-2015 by Stephane Fillod
+ *  Copyright (c) 2000-2016 by Stephane Fillod
  *
  *
  *   This library is free software; you can redistribute it and/or
@@ -269,5 +269,7 @@ extern const struct rig_caps ic92d_caps;
 extern const struct rig_caps id1_caps;
 extern const struct rig_caps id5100_caps;
 extern const struct rig_caps ic2730_caps;
+
+extern const struct rig_caps perseus_caps;
 
 #endif /* _ICOM_H */
